Bug fix horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ h2 {
  */
 nav ul {
   position: absolute;
-  width: 100vw;
+  width: 98vw;
   padding-top: 1em;
   padding-bottom: 2em;
   padding-left: 0em;
